added form to sign up page and redirect to spaces page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,7 @@
-<h1>Hello Makers</h1>
+<form action = '/spaces' method ='post'>
+First Name:<br><input type="text" name="first_name"><br>
+Second Name: <br> <input type="text" name="last_name"><br>
+Email:<br><input type="text" name="email" ><br>
+Password:<br> <input type="text" name="password" ><br>
+<input type="submit" name="Signup">
+  </form>
