list a space feature test passing

--- a/views/spaces.erb
+++ b/views/spaces.erb
@@ -1,14 +1,28 @@
 <!--
-  <form action='/spaces/new'>
-    <input type='submit' id="list_space" value = 'List a Space'/>
-  </form> -->
-  <html>
-  <head>
-  </head>
+<form action='/spaces/new'>
+<input type='submit' id="list_space" value = 'List a Space'/>
+</form> -->
+<html>
+<head>
+</head>
 
-  <body>
-  <form action='/spaces/new'>
-    <button type='submit' name='list_space'>List a Space</button>
-  </form>
+<body>
+
+
+
+  <table style="height: 100%; left: 0; position: absolute; text-align: center; width: 100%;">
+    <tr>
+      <td>
+        <h1>Book a Space</h1><br>
+        <form action='/spaces/new'>
+          <button type='submit' name='list_space'>List a Space</button>
+        </form>
+        <p>City centre apartment</p>
+
+      </td>
+    </tr>
+  </table>
+
+
 </body>
 </html>
