--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<form action = '/spaces' method ='post'>
+<form action = '/signup' method ='post'>
 First Name:<br><input type="text" name="first_name"><br>
 Second Name: <br> <input type="text" name="last_name"><br>
 Email:<br><input type="text" name="email" ><br>
