began login form

--- a/views/login.erb
+++ b/views/login.erb
@@ -1,1 +1,5 @@
-<%= flash[:notice]%>
+<form action = '/login' method="post">
+  Email:<br><input type="text" name="email" ><br>
+  Password:<br><input type="password" name="password"><br>
+<input type="submit" name="login" value="Sign in">
+  </form>
