passed first test login

--- a/views/login.erb
+++ b/views/login.erb
@@ -1,3 +1,5 @@
+<h1>Login</h1>
+
 <form action = '/login' method="post">
   Email:<br><input type="text" name="email" ><br>
   Password:<br><input type="password" name="password"><br>
