feature test for signup page

--- a/views/login.erb
+++ b/views/login.erb
@@ -1,4 +1,4 @@
-<h1>Login</h1>
+<h1>Log in to Makersbnb</h1>
 
 <form action = '/login' method="post">
   Email:<br><input type="text" name="email" ><br>
