required all fields to be entered

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <form action = '/signup' method ='post'>
-  First Name:<br><input type="text" name="first_name"><br>
-  Second Name: <br> <input type="text" name="last_name"><br>
-  Email:<br><input type="email" name="email" ><br>
-  Password:<br> <input type="password" name="password" ><br>
+  First Name:<br><input type="text" name="first_name" required><br>
+  Second Name: <br> <input type="text" name="last_name"required><br>
+  Email:<br><input type="email" name="email" required><br>
+  Password:<br> <input type="password" name="password" required><br>
   <input type="submit" name="Signup">
 </form>
