--- a/views/spaces_new.erb
+++ b/views/spaces_new.erb
@@ -1,9 +1,9 @@
 
 <form action='/spaces' method='post'>
-  <input type='text' placeholder='name' name='name'/><br>
-  <input type='text' placeholder='description' name='description'/><br>
-  <input type='text' placeholder='price per night' name='price_per_night'/><br>
-  <input type='text' placeholder='available from' name='available_from'/><br>
-  <input type='text' placeholder='available to' name='available_to'/><br>
+  <input type='text' placeholder='name' name='name'required/><br>
+  <input type='text' placeholder='description' name='description'required/><br>
+  <input type='text' placeholder='price per night' name='price_per_night'required/><br>
+  <input type='text' placeholder='available from' name='available_from'required/><br>
+  <input type='text' placeholder='available to' name='available_to'required/><br>
   <input type='submit' name='list_space' value='List Space'/><br>
 </form>
