added centralised banner

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,9 @@
+<div class="jumbotron text-center">
+  <h1>MakersBnB</h1>
+  <p>Welcome to MakersBnB</p>
+  <!-- <img src="images/makers.jpg"> -->
+</div>
+
 <form action = '/signup' method ='post'>
   First Name:<br><input type="text" name="first_name" required><br>
   Second Name: <br> <input type="text" name="last_name"required><br>
