--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,13 +2,14 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link href="styles/glDatePicker.default.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <meta charset="UTF-8">
   <title>MakersBnB</title>
 </head>
 <body>
   <div class="container">
-    <div class="row">    
+    <div class="row">
       <div class="col-sm-12">
         <table>
           <tr>
