created space booking page and added a display card

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,3 +27,12 @@ h1 {
 input:required {
 
 }
+
+.card {
+        margin: 0 auto; /* Added */
+        float: none; /* Added */
+        margin-bottom: 10px; /* Added */
+        object-fit: contain;
+
+
+}
