--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,7 +18,7 @@
                 <div class="jumbotron text-center">
                   <h1>MakersBnB</h1>
                   <p>Welcome to MakersBnB</p>
-                  <!-- <img src="images/makers.jpg"> -->
+                   <%# <img src="images/makers.jpg">  %>
                 </div>
                 <%= yield %>
               </div>
