--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,9 +2,20 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
-  <link href="styles/glDatePicker.default.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+ <link rel="stylesheet" href="/resources/demos/style.css">
+ <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+ <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+ <script>
+  $( function() {
+    $( "#datepicker1" ).datepicker({ dateFormat: 'dd-mm-yy' });
+  } );
+  $( function() {
+    $( "#datepicker2" ).datepicker({ dateFormat: 'dd-mm-yy' });
+  } );
+  </script>
   <title>MakersBnB</title>
 </head>
 <body>
