--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,9 @@ input:required {
         float: none; /* Added */
         margin-bottom: 10px; /* Added */
         object-fit: contain;
+}
 
+.navbar-default {
+  background-color: black;
 
 }
