added card template for viewig spaces

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,11 @@
 
 
 <form action = '/signup' method ='post'>
-  First Name:<br><input type="text" name="first_name" required><br>
-  Second Name: <br> <input type="text" name="last_name"required><br>
-  Email:<br><input type="email" name="email" required><br>
-  Password:<br> <input type="password" name="password" required><br>
-  <input type="submit" name="Signup">
+  <div class="form-group">
+  First Name:<input type="text" name="first_name" class="form-control" style="width: 50%;margin:auto;"required><br>
+  Second Name: <br> <input type="text" name="last_name" class="form-control" style="width: 50%;margin:auto;" required><br>
+  Email:<br><input type="email" name="email"  class="form-control" style="width: 50%;margin:auto; "required><br>
+  Password:<br> <input type="password" name="password" class="form-control" style="width: 50%;margin:auto;" required><br>
+  <input type="submit" name="Signup" class="btn btn-primary">
+  </div>
 </form>
