--- a/views/spaces_new.erb
+++ b/views/spaces_new.erb
@@ -1,9 +1,9 @@
-
+<h1> Create a new Listing </h1><br>
 <form action='/spaces' method='post'>
-  <input type='text' placeholder='name' name='name'required/><br>
-  <input type='text' placeholder='description' name='description'required/><br>
-  <input type='text' placeholder='price per night' name='price_per_night'required/><br>
-  <input type='text' placeholder='available from' name='available_from'required/><br>
-  <input type='text' placeholder='available to' name='available_to'required/><br>
-  <input type='submit' name='list_space' value='List Space'/><br>
+  <input type='text' placeholder='name' name='name' class="form-control" style="width: 50%;margin:auto;" required/><br>
+  <input type='text' placeholder='description' name='description' class="form-control" style="width: 50%;margin:auto;"required/><br>
+  <input type='text' placeholder='price per night' name='price_per_night' class="form-control" style="width: 50%;margin:auto;"required/><br>
+  <input type='text' placeholder='available from' name='available_from' class="form-control" style="width: 50%;margin:auto;"required/><br>
+  <input type='text' placeholder='available to' name='available_to' class="form-control" style="width: 50%;margin:auto;"required/><br>
+  <input type='submit' name='list_space' value='List Space' class="btn btn-primary"/><br>
 </form>
