--- a/views/layout.erb
+++ b/views/layout.erb
@@ -43,6 +43,7 @@
     <div class="row">
       <div class="col-sm-12">
         <table>
+          <tbody>
           <tr>
             <td>
               <div class="center">
@@ -52,11 +53,9 @@
               </div>
             </td>
           </tr>
+          </tbody>
         </table>
-
       </div>
     </div>
-  </div>
-
 </body>
 </html>
