--- a/views/login.erb
+++ b/views/login.erb
@@ -1,7 +1,7 @@
 <%= flash[:notice] %>
 <h1>Log in to Makersbnb</h1>
 <form action = '/login' method="post">
-  Email:<br><input type="text" name="email" required><br>
-  Password:<br><input type="password" name="password" required><br>
-  <input type="submit" name="login" value="Sign in">
+  Email:<br><input type="text" name="email" class="form-control" style="width: 50%;margin:auto;" required><br>
+  Password:<br><input type="password" name="password" class="form-control" style="width: 50%;margin:auto;" required><br>
+  <input type="submit" name="login" value="Sign in" class="btn btn-primary">
 </form>
